--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "description": "[![Actions Status](https://github.com/Zakir0000/layout-designer-project-58/workflows/hexlet-check/badge.svg)](https://github.com/Zakir0000/layout-designer-project-58/actions)",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
